/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'com.diffplug.spotless'
    id 'com.google.protobuf' version '0.9.4'
}

protobuf {
  protoc {
    artifact = "com.google.protobuf:protoc:3.25.1"
  }
  plugins {
    grpc {
      artifact = 'io.grpc:protoc-gen-grpc-java:1.65.0'
    }
  }
  generateProtoTasks {
    all()*.plugins {
      grpc {}
    }
  }
}

compileJava {
    options.compilerArgs.addAll(['--enable-preview'])
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.vector'])
}

// tasks.withType(JavaCompile).each {
//     it.options.compilerArgs.add('--enable-preview')
//     it.options.compilerArgs.add('--add-modules', 'jdk.incubator.vector')
// }

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}


dependencies {
    // This dependency is used by the application.
    implementation libs.guava
    implementation 'io.netty:netty-all:4.1.111.Final'    
    runtimeOnly 'io.grpc:grpc-netty-shaded:1.65.0'
    implementation 'io.grpc:grpc-protobuf:1.65.0'
    implementation 'io.grpc:grpc-stub:1.65.0'
    compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
}

testing {
    suites {
        // Configure the built-in test suite
        test {
            // Use TestNG test framework
            useTestNG('7.5.1')
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'chatservice.ChatServer'
    applicationDefaultJvmArgs = ['--enable-preview', 
                                 '--add-modules', 'jdk.incubator.vector']    
}

spotless {
  java {
    googleJavaFormat()
    }
}
